--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities{
+    .mobile-hero-image {
+        background-image: url('/assets/home/mobile/image-header.jpg');
+    }
+    .tablet-hero-image {
+        background-image: url('/assets/home/tablet/image-header.jpg');
+    }
+    .desktop-hero-image {
+        background-image: url('/assets/home/desktop/image-hero.jpg');
+    }
+}
